fixed card alignment

--- a/Frontend/pages/user/user.css
+++ b/Frontend/pages/user/user.css
@@ -55,6 +55,6 @@ body::before {
     }
 
     .mdl-cell--1-offset, .mdl-cell--1-offset-desktop.mdl-cell--1-offset-desktop {
-          margin-left: unset !important;
+          margin-left: 8px !important;
     }
   }
